# token_running

./: .gitignore  README.md  admin.json  mint-authority.json  package-lock.json  package.json  pnpm-lock.yaml  treasury.json  tsconfig.json
contract/: .gitignore  Anchor.toml  Cargo.lock.bak  Cargo.lock.v4.bak  Cargo.toml  admin2.json  deploy-wallet.json  fetched_idl.json  fetched_idl_filtered.json  package-lock.json  package.json  rust-toolchain.toml  test-wallet.json  test_calculations.js
contract/.cargo/: config.toml
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: lib.rs
contract/scripts/: 10_checkMintHook.ts  11_updateMetas.ts  12_resolveAccounts.ts  1_initialize.ts  2_create_frozen_mint_local.ts  3_initializeExtaAccountMetaList.ts  4_testTransferHook.ts  5_depositToEscrow.ts  5_update_price.ts  6_debugTransfer.ts  6_get_price.ts  6_get_price_mainnet.ts  7_testOrder.ts  8_checkMetas.ts  9_fetchIdl.ts  buyTokens.ts  checkMainnetState.ts  checkMint.ts  checkSpecificMint.ts  check_balance.ts  check_deploy_balance.ts  check_metas.ts  check_mint_authority.ts  check_mint_extensions.ts  check_mint_hook.ts  check_playground_balance.ts  check_program.ts  check_unknown_account.ts  create_frozen_mint_local.ts  create_mint_with_metadata.ts  find-keypair-array.ts  findDevnetMintsForProgram.ts  findMainnetMintsForProgram.ts  fund_playground_wallet.ts  getMintAuthorityKey.ts  getPDA.ts  getTreasury.ts  initialize.ts  initialize_state_only.ts  read_state.ts  (+7 more)
contract/tests/: contract.ts
keypairs/: README.md  frozen-mint.json  mint-authority-prod.json  mint-authority.json
metadata/: dev-meta.json  dev.json  prod-meta.json  prod.json
