[package]
name = "list_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "list_contract"

[features]
default = ["custom-heap", "no-entrypoint"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
# Anclamos solana-program a 1.17.13
solana-program = "=1.17.13"

spl-transfer-hook-interface = "0.5.0"
spl-tlv-account-resolution = "0.5.0"
spl-pod = "0.1.0"
spl-token = "=4.0.0"

# Fixes for common dependency issues
ahash = "=0.8.6"

# DIAGNOSTIC: Pin wit-bindgen to old version to find culprit
wit-bindgen = "=0.19.0"
