[package]
name = "list_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "list_contract"

[features]
default = ["custom-heap", "no-entrypoint"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
# Dependencies compatible with Solana 1.16.27 (stable and edition2024-free)
solana-program = "=1.16.27"

# Dependencies compatible with Solana 1.16.x
# spl-transfer-hook-interface = "0.2.0"
# spl-tlv-account-resolution = "0.2.0"
# spl-pod = "0.1.0"
# spl-token = "=4.0.0"

# Fixes for common dependency issues
ahash = "=0.8.4"
# wit-bindgen = { workspace = true }
# spdx = { workspace = true }
winnow = "=0.5.40"
toml_datetime = "=0.6.6"
indexmap = "=2.1.0"
